--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
   "ignore": [
   ],
   "dependencies": {
-    "jquery": ">= 2.1.0",
+    "jquery": "^1.8.0 || ^2.0.0",
     "modernizr": ">= 2.7.2",
     "fastclick": ">=0.6.11",
     "jquery.cookie": "~1.4.0",
